@@ -25,12 +25,9 @@
  *                  Casper S. Hornstrup (chorns@users.sourceforge.net)
  */
 
-#include <ddk/ntddk.h>
+#include "precomp.h"
 #include <ddk/ntddscsi.h>
-
 #include <ntdll/rtl.h>
-
-//#include <ntos/minmax.h>
 
 #include "usetup.h"
 #include "console.h"
